# redmine-rs

./: .dockerignore  Cargo.toml  Dockerfile  README.md  SEED.md  rust-toolchain.toml
.github/workflows/: ci.yml
crates/redmine-canon/: Cargo.toml
crates/redmine-canon/data/: fork_convergence.json  redmine.ogar.json
crates/redmine-canon/src/: app.rs  class_ids.rs  class_view.rs  convergence.rs  lib.rs
crates/rm-auth/: Cargo.toml
crates/rm-auth/src/: config.rs  extractor.rs  handlers.rs  lib.rs  session.rs  users.rs
crates/rm-handlers/: Cargo.toml
crates/rm-handlers/src/: common.rs  home.rs  issues.rs  issues_form.rs  lib.rs  list_chrome.rs  news.rs  news_form.rs  projects.rs  projects_form.rs  queries.rs  relations.rs  roles.rs  scm.rs  taxonomy.rs  time_entries.rs  users.rs  wiki_form.rs  wiki_pages.rs
crates/rm-server/: Cargo.toml
crates/rm-server/src/: error.rs  handlers.rs  lib.rs  main.rs  router.rs
crates/rm-store/: Cargo.toml
crates/rm-store/src/: error.rs  issue.rs  lib.rs  news.rs  project.rs  query.rs  relation.rs  role.rs  scm.rs  seed.rs  store.rs  taxonomy.rs  time_entry.rs  user.rs  wiki_page.rs
