[package]
name = "redmine-canon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Canonical contract for the Redmine → Rust port: the OGAR codebook extraction snapshot of the Redmine corpus, exposed as typed Rust."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
