[package]
name = "redmine-canon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Canonical contract for the Redmine → Rust port: the OGAR codebook extraction snapshot of the Redmine corpus, exposed as typed Rust."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
# Canonical home of the class-id constants (OGAR codebook). Re-exported by
# `class_ids` so this port shares the single source of truth with
# `op-canon` — the constants cannot drift across ports.
ogar-vocab = { git = "https://github.com/AdaWorldAPI/OGAR", branch = "main" }
# ClassView impl over the canonical concepts — re-exported as
# `redmine_canon::class_view::OgarClassView`. Same one-source-of-truth
# pattern as `class_ids`: the projection bridge lives in OGAR; this port
# re-exports it. Northstar plan §3 C2.
ogar-class-view = { git = "https://github.com/AdaWorldAPI/OGAR", branch = "main" }
# Run-time ClassView trait + FieldMask + RenderRow. Re-exported so
# downstream `rm-*` crates have one import for the projection contract.
lance-graph-contract = { git = "https://github.com/AdaWorldAPI/lance-graph", branch = "main" }
