[package]
name = "rm-handlers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Per-resource axum handlers for Redmine-RS. Phase 1 of the Integration Plan — each width track (W1..W8) adds one module here owning a single canonical concept's list / detail (and later form) routes."

[lib]
name = "rm_handlers"

[dependencies]
# Foundation data + auth substrate (Phase 0). NOT rm-server — that's
# the consumer of this crate, not a dep.
rm-store             = { path = "../rm-store" }
rm-auth              = { path = "../rm-auth" }
redmine-canon        = { path = "../redmine-canon" }

# Render kit — the askama harness handler bodies compose.
ogar-render-askama   = { git = "https://github.com/AdaWorldAPI/OGAR", branch = "main" }

# SurrealDB types for record-id construction in path extractors.
surrealdb-types      = { git = "https://github.com/AdaWorldAPI/surrealdb", branch = "main" }

# HTTP server primitives.
axum                 = "0.7"

# Async runtime + error glue.
tokio                = { version = "1", features = ["macros", "rt-multi-thread"] }
thiserror            = "1"
tracing              = "0.1"

[dev-dependencies]
tower                = { version = "0.4", features = ["util"] }
http-body-util       = "0.1"
tokio                = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }
